@@ -1,0 +1,12 @@
+#!/usr/bin/env perl
+use strict;
+
+use Cwd qw(abs_path);
+use FindBin;
+use lib abs_path( "$FindBin::Bin/../lib" );
+
+use OmniPITR::Program::Backup::Cleanup;
+
+OmniPITR::Program::Backup::Cleanup->new()->run();
+
+# vim: set ft=perl :
